# tesou

./: .dockerignore  Dockerfile  README.md  versions.env
.github/workflows/: build.yml
backend/: .gitignore  Cargo.toml  generate_schema.sh
backend/db/migrations/1.0.0/: down.sql  up.sql
backend/mock_client_and_server/: clients.py  mockresponse  server.py
backend/src/: app.rs  db_options.rs  errors.rs  main.rs  positions_handler.rs  positions_server.rs  schema.rs  tester.rs  tests.rs  token.rs  utils.rs
backend/src/models/: crud.rs  mod.rs  position.rs  position_tests.rs  position_ws.rs  position_ws_tests.rs  sport_mode.rs  sport_mode_tests.rs  user.rs  user_tests.rs
backend/web/: index.html
frontend/: .gitignore  .metadata  pubspec.yaml
frontend/android/: settings.gradle
frontend/android/app/: build.gradle  build.gradle.kts
frontend/android/app/src/main/: AndroidManifest.xml
frontend/android/app/src/main/kotlin/fr/ninico/tesou/: MainActivity.kt
frontend/android/app/src/main/res/values/: colors.xml
frontend/android/app/src/profile/: AndroidManifest.xml
frontend/aosp_location/: .metadata  pubspec.yaml
frontend/aosp_location/android/: build.gradle  settings.gradle
frontend/aosp_location/android/src/main/: AndroidManifest.xml
frontend/aosp_location/android/src/main/kotlin/fr/ninico/aosp_location/: AospLocationPlugin.kt
frontend/aosp_location/lib/: aosp_location.dart  aosp_location_android.dart  aosp_location_web.dart  web_geolocation_interop.dart
frontend/aosp_location/test/: aosp_location_test.dart
frontend/ios/Runner/: Info.plist
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/lib/: audio_handler.dart  globals.dart  i18n.dart  location_task_handler.dart  main.dart  normal_task_handler.dart  sport_task_handler.dart
frontend/lib/components/: home.dart  new_user.dart  positions.dart  settings.dart  speed_gauge.dart  users_dropdown.dart
frontend/lib/models/: crud.dart  mock_api.dart  new_position.dart  position.dart  preferences.dart  user.dart
frontend/lib/url_parser/: url_parser.dart  url_parser_stub.dart  url_parser_web.dart
frontend/test/: models_test.dart  ui_test.dart
frontend/web/: index.html  manifest.json
miscellaneous/home_assistant_custom_component/tesou/: __init__.py  api.py  config_flow.py  const.py  device_tracker.py  manifest.json
miscellaneous/home_assistant_custom_component/tesou/translations/: en.json  fr.json
