[package]
name = "tesou"
version = "1.0.0"
authors = ["Nicolas Pernoud <github@ninico.fr>"]
edition = "2024"

[dependencies]
actix = "0.13.5"
actix-cors = "0.7.1"
actix-files = "0.6.9"
actix-web = "4.12.1"
actix-web-httpauth = "0.8.2"
actix-ws = "0.3.0"
base64ct = { version = "1.8.1", features = ["alloc"] }
chacha20poly1305 = "0.10.1"
diesel = { version = "2.3.4", features = ["r2d2", "sqlite"] }
diesel_migrations = "2.3.1"
env_logger = "0.11.8"
futures-util = { version = "0.3.31", default-features = false, features = ["std"] }
libsqlite3-sys = { version = "0.35.0", features = ["bundled"] }
log = "0.4.29"
r2d2 = "0.8.10"
rand = "0.9.2"
reqwest = { version = "0.12.25", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tokio = { version = "1.48.0", features = ["macros", "sync"] }
urlencoding = "2.1.3"
[target.'cfg(unix)'.dependencies]
openssl = { version = "0.10.75", features = ["vendored"] }

[dev-dependencies]
futures = "0.3.31"
awc = "3.8.1"
actix-rt = "2.11.0"
actix-test = "0.1.5"
regex = "1.12.2"
